--- a/OneDrive/Desktop/coso/html/index.html
+++ b/OneDrive/Desktop/coso/html/index.html
@@ -16,8 +16,8 @@
         <nav>
             <img src="../img/Level-Up.png" alt="" srcset="">
             <a href="">Inicio</a>
-            <a href="">Contacto</a>
-            <a href="">Redes sociales</a>
+            <a href="#contacto">Contacto</a>
+            <a href="#contacto">Redes sociales</a>
         </nav>
         <div class="sesion">
             <button onclick="window.location.href='session.html'">Registrarse</button>
@@ -207,8 +207,12 @@
             <p>Nuestra mision es distribuir productos de calidad por todo el pais y ser el mayor distribuidor.</p>
         </div>
     </div>
-        
-    <footer>
+
+    <div class="cart">
+        <button>Carrito</button>
+    </div>
+
+    <footer id="contacto">
         <div class="socialMedia">
             <h1>Redes sociales</h1>
                 <a href="https://linkedin.com/"><span class="fa-brands fa-linkedin"></span>Linkedin</a>
