--- a/OneDrive/Desktop/coso/html/session.html
+++ b/OneDrive/Desktop/coso/html/session.html
@@ -70,7 +70,7 @@
     </div>
 
     <footer>
-        <p>Este es un footer</p>
+        <img src="../img/a779448ea0182775bde48940b4c402c7.jpg" alt="" srcset="">
     </footer>
 </body>
 </html>
