--- a/OneDrive/Desktop/coso/html/session.html
+++ b/OneDrive/Desktop/coso/html/session.html
@@ -73,7 +73,7 @@
     </div>
 
     <footer>
-        <img src="../img/a779448ea0182775bde48940b4c402c7.jpg" alt="" srcset="">
+        <p>Todos los derechos reservados ©</p>
     </footer>
 </body>
 </html>
